# coup-online

./: .gitignore  README.md  pyproject.toml
src/backend/: constants.py  database.py  engine.py  errors.py  main.py  settings.py
src/backend/auth/: optional.py  required.py
src/backend/engine/: deck.py  enums.py  match.py  player.py  registry.py
src/backend/models/: match.py  player.py  player_match_link.py
src/backend/routers/: __init__.py  auth.py  friends.py  matches.py  profile.py  websockets.py
src/backend/tests/: test_engine.py  test_main.py
src/backend/tests/engine/: test_deck.py
src/backend/tests/routers/: conftest.py  test_auth.py  test_friends.py  test_matches.py  test_profile.py
src/backend/tests/test_engine/: test_deck.py  test_match.py  test_player.py
src/static/pages/: game.html  index.html
src/static/scripts/game/: config.js  main.js  settings.js  shaders.js
src/static/scripts/landing/: main.js  settings.js
src/static/scripts/lobby/: auth-overlay.js  friends.js  main.js  matches.js  music.js  profile.js  rules-overlay.js  session-socket.js  session.js  settings.js  toast-messages.js  toast.js  tribunal-lobby.js
src/static/styles/: landing.css  lobby.css
src/static/styles/game/: action-log.css  action-menu.css  card-loss-menu.css  contest-menu.css  declare-card-menu.css  exchange-menu.css  hud.css  overlay.css  radial-menu.css  summary-panel.css  target-menu.css  tokens.css
src/static/styles/lobby/: auth-overlay.css  avatar-editor.css  buttons.css  forms.css  lobby-shell.css  lobby-sidebar.css  match-panels.css  misc-panels.css  (+4 more)
(+43 files in other folders)
